# Local-App

./: .gitignore  FULL_FILE_CONTENTS.md  index.html  package-lock.json  vite.config.ts
patches/patch-001-foundation-base-structure/P01_foundation_base_structure/: FULL_FILE_CONTENTS.md  PATCH_NOTES.md  README.md  apply_patch.mjs  apply_patch.ps1  apply_patch.sh  patch-manifest.json  rollback.md  validate.md
patches/patch-002-multi-business-workspace-settings-core/P02_multi_business_workspace_settings_core/: FULL_FILE_CONTENTS.md  PATCH-2-README.md  PATCH_NOTES.md  TREE.txt  apply_patch.mjs  apply_patch.sh  patch-manifest.json  rollback.md  validate.md
patches/patch-003-catalog-core/: PATCH-3-README.md  PATCH_NOTES.md  README.md  TREE.txt  apply_patch.mjs  apply_patch.ps1  patch-manifest.json  rollback.md  validate.md
patches/patch-003-catalog-core/files/: package.json
patches/patch-003-catalog-core/migrations/: MIGRATION_NOTES.md
patches/patch-004-inventory-ledger-core/P04_inventory_ledger_core/: FULL_FILE_CONTENTS.md  PATCH-4-README.md  PATCH_NOTES.md  TREE.txt  rollback.md  (+4 more)
scripts/: validate-patch3.mjs  validate-patch4.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: business.rs  mod.rs  settings.rs
src-tauri/src/core/: catalog.rs  db.rs  error.rs  migrations.rs  patching.rs  paths.rs  seed.rs
src-tauri/src/core/migrations/: 001_base.sql  003_catalog_core.sql
src-tauri/src/domain/: mod.rs  models.rs
src/app/: AppProvider.tsx
src/shared/: api.ts  types.ts  utils.ts
(+91 files in other folders)
